feature(bookings): User can book a trip [Finishes #167152425]
